tests/snapshots/command__disable_version_flag-2.snap
---
source: tests/command.rs
expression: "util::run(spec, args)"
---
command cat <<'EOF_29239711'
myprog 1.0.0
EOF_29239711
exit 0
