tests/snapshots/command__display_name.snap
---
source: tests/command.rs
expression: "util::run(spec, args)"
---
command cat <<'EOF_1c6068ef'
[1m[31merror:[0m unexpected argument '[33m--cfg[0m' found

[1m[4mUsage:[0m [1mmyprog[0m [OPTIONS]

For more information, try '[1m--help[0m'.
EOF_1c6068ef
exit 1
