tests/snapshots/command__display_order.snap
---
source: tests/command.rs
expression: output
---
command cat <<'EOF_b27eacc1'
[1m[4mUsage:[0m [1mmyprog[0m [COMMAND]

[1m[4mCommands:[0m
  [1malpha[0m  I should be first!
  [1mbeta[0m   Some help and text
  [1mhelp[0m   Print this message or the help of the given subcommand(s)

[1m[4mOptions:[0m
  [1m-h[0m, [1m--help[0m  Print help
EOF_b27eacc1
exit 0
