tests/snapshots/command__dont_delimit_trailing_values.snap
---
source: tests/command.rs
expression: output
---
claptrap_cmd='cmd'
claptrap_rest=('foo' '--' 'arg1' '-r' 'val1')
