tests/snapshots/command__group.snap
---
source: tests/command.rs
expression: "util::run(spec, args)"
---
command cat <<'EOF_c1fb70eb'
[1m[31merror:[0m the argument '[33m--major <major>[0m' cannot be used with:
  [33m--minor <minor>[0m
  [33m--patch <patch>[0m

[1m[4mUsage:[0m [1mcmd[0m <--set-ver <set-ver>|--major <major>|--minor <minor>|--patch <patch>>

For more information, try '[1m--help[0m'.
EOF_c1fb70eb
exit 1
