tests/snapshots/command__groups.snap
---
source: tests/command.rs
expression: "util::run(spec, args)"
---
claptrap_major='1'
claptrap_iface='eth0'
