tests/snapshots/command__infer_long_args_ambiguous.snap
---
source: tests/command.rs
expression: "util::run(spec, args)"
---
command cat <<'EOF_9ff163c4'
[1m[31merror:[0m unexpected argument '[33m--te[0m' found

  [32mtip:[0m a similar argument exists: '[32m--temp[0m'

[1m[4mUsage:[0m [1mmyprog[0m [1m--temp[0m

For more information, try '[1m--help[0m'.
EOF_9ff163c4
exit 1
