tests/snapshots/command__infer_subcommands.snap
---
source: tests/command.rs
expression: output
---
claptrap_subcommand='test'
claptrap_test_arg1='true'
